# sec.io

./: .env.example  .gitignore  README.md  pyproject.toml
src/sec_llm/: __init__.py  agent.py  agents.py  compute.py  config.py  dependencies.py  formatter.py  guardrails.py  main.py  models.py  pipeline.py  runner.py
src/sec_llm/api/: chat.py  company.py  health.py  router.py
src/sec_llm/prompts/: agent_system.txt  clarification_system.txt  planner_system.txt  summarizer_system.txt
src/sec_llm/sec/: __init__.py  cache.py  client.py  extractor.py  normalizer.py
tests/: conftest.py
tests/fixtures/: sample_execution_plan.json  sample_income_statement.json  test_conversations.json
tests/integration/: test_api.py  test_pipeline.py  test_sec_client.py
tests/unit/: test_compute_aggregation.py  test_compute_growth.py  test_compute_margins.py  test_formatter.py  test_hallucination.py  test_models.py  test_normalizer.py
